--- a/css/main.css
+++ b/css/main.css
@@ -1914,7 +1914,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #fff;
+  background: #11ff34;
 }
 .links-of-blogroll {
   font-size: 13px;
